--- a/Bootstrapmade4.html
+++ b/Bootstrapmade4.html
@@ -360,7 +360,17 @@
     </div>
     </div>
     <div class="check">
+        <div class="container8">
+           <div class="flex14">
+                <div class="a1">
+                    <h2>Subscribe To Our Newsletter</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, reprehenderit!</p>
+                </div>
+                <div class="a2">
 
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
