--- a/Bootstrapmade4.html
+++ b/Bootstrapmade4.html
@@ -367,7 +367,59 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, reprehenderit!</p>
                 </div>
                 <div class="a2">
-
+                       <div class="ww-100">
+                            <div class="flex15">
+                                <div class="inputClass">
+                                    <form action="">
+                                        <input type="text" name="" id="">
+                                    </form>
+                                </div>
+                                <div class="pp2">
+                                    <p>Subcribe</p>
+                                </div>
+                            </div>
+                       </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="last">
+        <div class="container9">
+            <div class="flex16">
+                <div class="b1">
+                    <h5>agriculture</h5>
+                     <div class="q1">
+                        <p>A108 Adam Street New York, NY 535022</p>
+                     </div>
+                     <div class="q2">
+                        <p>Phone: +1 5589 55488 55 Email: info@example.com</p>
+                     </div>
+                     <div class="q3">
+                        <p>© Copyright MyWebsite. All Rights Reserved Designed by BootstrapMade</p>
+                     </div>
+                </div>
+                <div class="b2">
+                    <h5>Useful Links</h5>
+                    <span></span>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Terms Of Service</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="b3">
+                    <h5>Our Services</h5>
+                    <span></span>
+                </div>
+                <div class="b4">
+                    <h5>Hic solutasetp</h5>
+                    <span></span>
+                </div>
+                <div class="b5">
+                    <h5>Nobis illum</h5>
+                    <span></span>
                 </div>
             </div>
         </div>
