--- a/Bootstrapmade4.html
+++ b/Bootstrapmade4.html
@@ -412,14 +412,44 @@
                 <div class="b3">
                     <h5>Our Services</h5>
                     <span></span>
+                    <ul>
+                        <li><a href="">Web Design</a></li>
+                        <li><a href="">Web Development</a></li>
+                        <li><a href="">Product Management</a></li>
+                        <li><a href="">Marketing</a></li>
+                        <li><a href="">Graphic Design</a></li>
+                    </ul>
                 </div>
                 <div class="b4">
                     <h5>Hic solutasetp</h5>
                     <span></span>
+                    <ul>
+                        <li><a href="">molestias accusamusiure</a></li>
+                        <li><a href="">Excepturi dignissimos</a></li>
+                        <li><a href="">Suscipit distinctio</a></li>
+                        <li><a href="">Dilecta</a></li>
+                        <li><a href="">Sit quas consecteture</a></li>
+                    </ul>
                 </div>
                 <div class="b5">
                     <h5>Nobis illum</h5>
                     <span></span>
+                    <ul>
+                        <li><a href="">Ipsam</a></li>
+                        <li><a href="">laudantium dolorum</a></li>
+                        <li><a href="">Dinera</a></li>
+                        <li><a href="">Trodelas</a></li>
+                        <li><a href="">Flexo</a></li>
+                    </ul>
+
+                    <div class="social">
+                        <div class="flex17">
+                            <i class="fa-brands fa-square-x-twitter" style="color: #2e5241;"></i>
+                            <i class="fa-brands fa-facebook" style="color: #2e5241;"></i>
+                            <i class="fa-brands fa-instagram" style="color: #2e5241;"></i>
+                            <i class="fa-brands fa-linkedin" style="color: #2e5241;"></i>
+                        </div>   
+                    </div>
                 </div>
             </div>
         </div>
