--- a/Bootstrapmade5.html
+++ b/Bootstrapmade5.html
@@ -333,7 +333,83 @@
                         </div>
                     </div>
                 </div>
+                <div class="lw-100">
+                    <div class="lw-90">
+                        <div class="flex17">
+                            <div class="w-20">
+                                <img src="https://bootstrapmade.com/content/demo/BookLanding/assets/img/book/book-3.webp" alt="" width="300px" height="300px">
+                            </div>
+                            <div class="w-80">
+                                <button>LIMITED TIME OFFER</button>
+                                <div class="h2">
+                                    <h2>Start Your Journey Today</h2>
+                                </div>
+                                <div class="p">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Order now and get exclusive bonus content and 25% off.</p>
+                                </div>
+                                <div class="l-social">
+                                    <div class="flex18">
+                                        <div class="l-1">
+                                            <span><i class="fa-solid fa-gift" style="color: #f5f1f1;"></i>
+                                                Exclusive Digital Extras
+                                            </span>
+                                        </div>
+                                        <div class="l-2">
+                                            <span><i class="fa-solid fa-dollar-sign" style="color: #f5f1f1;"></i>
+                                                Money-Back Guarantee</span>
+                                        </div>
+                                        <div class="l-3">
+                                            <span><i class="fa-solid fa-car-side" style="color: #f5f1f1;"></i>
+                                                Free Shipping</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="parag">
+                                    <p>Offer ends in:</p>
+                                </div>
+                               <div class="hms">
+                                    <div class="flex19">
+                                        <div class="h">
+                                            <p>249</p>
+                                            <div class="hour">
+                                                <p>DAYS</p>
+                                            </div>
+                                        </div>
+                                        <div class="m">
+                                            <p>12</p>
+                                            <div class="minute">
+                                                <p>MINUTES</p>
+                                            </div>
+                                        </div>
+                                        <div class="s">
+                                            <p>35</p>
+                                            <div class="second">
+                                                <P>SECONDS</P>
+                                            </div>
+                                        </div>
+                                        <div class="S">
+                                            <p>21</p>
+                                            <div class="psecond">
+                                                <P>HOUR</P>
+                                            </div>
+                                        </div>
+                                    </div>
+                               </div>
+                               <div class="tbutton">
+                                    <div class="flex20">
+                                        <button class="J"><a href="">Get Your Copy Now</a></button>
+                                        <button class="K"><a href="">Read Sample</a></button>
+                                    </div>
+                               </div>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+                <div class="footer">
+
+                </div>
             </div>
         </div>
+    </div>
 </body>
 </html>
