--- a/Bootstrapmade5.html
+++ b/Bootstrapmade5.html
@@ -406,7 +406,37 @@
                     </div>  
                 </div>
                 <div class="footer">
+                    <h2>Book Landing</h2>
+                    <i>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat</i>
+                    <div class="sos">
+                        <div class="flex21">
+                            <div class="twiter">
+                                <i class="fa-brands fa-x-twitter" style="color: #f0f2f4;"></i>
+                            </div>
+                            <div class="facebook">
+                                <i class="fa-brands fa-facebook" style="color: #fafcff;"></i>
+                            </div>
+                            <div class="insta">
+                                <i class="fa-brands fa-instagram" style="color: #f9fafb;"></i>
+                            </div>
+                            <div class="ss">
+                                <i class="fa-solid fa-s" style="color: #f7f9fd;"></i>
+                            </div>
+                            <div class="linked">
+                                <i class="fa-brands fa-linkedin" style="color: #f9fafa;"></i>
+                            </div>
+                        </div> 
+                        
+                    </div>
+                    <div class="border"> 
 
+                    </div>
+                    <div class="paragraph">
+                        <p>Copyright BookLanding All Rights Reserved</p>
+                    </div>
+                    <div class="spara">
+                        <p>Designed by BootstrapMade</p>
+                    </div>
                 </div>
             </div>
         </div>
