--- a/Before-After(Text).html
+++ b/Before-After(Text).html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/Before-After(Text).css">
+    <link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
     <!-- before and after using (text) 
