--- a/MegaMenu.html
+++ b/MegaMenu.html
@@ -1,6 +1,9 @@
 <!-- 1.menu
     2.mega-menu -->
 
+   <!-- 1.menu
+    2.mega-menu -->
+
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -13,67 +16,35 @@
         <ul>
             <li><a href="">Home</a>
                 <ul>
-                    <li><a href="">Prinsi</a></li>
+                    <li><a href="">Prinsi</a>
+                        <ul>
+                            <li><a href="">Manishbhai</a></li>
+                            <li><a href="">Vilashben</a></li>
+                            <li><a href="">Sonalben</a></li>
+                            <li><a href="">Saileshbhai</a></li>
+                            <li><a href="">Granth</a></li>
+                            <li><a href="">Rudra</a></li>
+                        </ul>
+                    </li>
                     <li><a href="">Granth</a></li>
                     <li><a href="">Rudra</a></li>
                     <li><a href="">Charmi</a></li>
                     <li><a href="">Dhruv</a></li>
                 </ul>
             </li>
-            <li><a href="">Courses</a>
-                <ul>
-                    <li><a href="">P</a></li>
-                    <li><a href="">G</a></li>
-                    <li><a href="">R</a></li>
-                    <li><a href="">C</a></li>
-                    <li><a href="">D</a></li>
-                </ul>
-            </li>
-            <li><a href="">Activities</a>
-                <ul>
-                    <li><a href="">Prinsi</a></li>
-                    <li><a href="">Granth</a></li>
-                    <li><a href="">Rudra</a></li>
-                    <li><a href="">Charmi</a></li>
-                    <li><a href="">Dhruv</a></li>
-                </ul>
-            </li>
+            <li><a href="">Courses</a></li>
+            <li><a href="">Activities</a></li>
             <li><a href="">Blog</a>
                 <ul>
-                    <li><a href="">Prinsi</a></li>
-                    <li><a href="">Granth</a></li>
-                    <li><a href="">Rudra</a></li>
-                    <li><a href="">Charmi</a></li>
-                    <li><a href="">Dhruv</a></li>
+                    <li><a href="">Manishbhai</a></li>
+                    <li><a href="">Vilashben</a></li>
+                    <li><a href="">Sonalben</a></li>
+                    <li><a href="">Saileshbhai</a></li>
                 </ul>
             </li>
-            <li><a href="">Know us </a>
-                <ul>
-                    <li><a href="">Prinsi</a></li>
-                    <li><a href="">Granth</a></li>
-                    <li><a href="">Rudra</a></li>
-                    <li><a href="">Charmi</a></li>
-                    <li><a href="">Dhruv</a></li>
-                </ul>
-            </li>
-            <li><a href="">Get in touch</a>
-                <ul>
-                    <li><a href="">Prinsi</a></li>
-                    <li><a href="">Granth</a></li>
-                    <li><a href="">Rudra</a></li>
-                    <li><a href="">Charmi</a></li>
-                    <li><a href="">Dhruv</a></li>
-                </ul>
-            </li>    
-            <li><a href="">Student zone</a>
-                <ul>
-                    <li><a href="">Prinsi</a></li>
-                    <li><a href="">Granth</a></li>
-                    <li><a href="">Rudra</a></li>
-                    <li><a href="">Charmi</a></li>
-                    <li><a href="">Dhruv</a></li>
-                </ul>
-            </li>
+            <li><a href="">Know us </a></li>
+            <li><a href="">Get in touch</a></li>    
+            <li><a href="">Student zone</a></li>
         </ul>
        
     </body>
