--- a/Animation1.html
+++ b/Animation1.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="css/Animation1.css">
 </head>
 <body>
-    <div class="main">
-        <div class="circle">
-                
-        </div>
+    <div class="card">
+        
     </div>
 </body> 
 </html>
