--- a/Bootstrapmade5.html
+++ b/Bootstrapmade5.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/Bootstrapmade5.css">
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/Agriculturemedia.css">
 </head>
 <body>
     <div class="w-100">
